Implement Online Docker CP
Implements Online Docker CP, including ContainerStatPath, using
Guest Tools and the Toolbox. These changes also introduce storage
handlers for Docker CP implementations of Export/Import Archive
and personality code for ContainerArchivePath and
ContainerExtractToDir. Fixes 5606 and 5570.
