# lib/apiservers/portlayer/restapi/handlers/storage_handlers.go
@@ -16,27 +16,28 @@ package handlers
 
 import (
 	"bufio"
+	"bytes"
 	"context"
-	"encoding/base64"
-	"encoding/json"
 	"fmt"
 	"io"
+	"io/ioutil"
 	"net/http"
 	"net/url"
 	"os"
+	"path/filepath"
 	"strconv"
 
 	log "github.com/Sirupsen/logrus"
 	"github.com/go-openapi/runtime/middleware"
 
-	"bytes"
-
+	"github.com/vmware/govmomi/vim25/types"
 	"github.com/vmware/vic/lib/apiservers/portlayer/models"
 	"github.com/vmware/vic/lib/apiservers/portlayer/restapi/operations"
 	"github.com/vmware/vic/lib/apiservers/portlayer/restapi/operations/storage"
-	vicarchive "github.com/vmware/vic/lib/archive"
+	"github.com/vmware/vic/lib/archive"
 	epl "github.com/vmware/vic/lib/portlayer/exec"
 	spl "github.com/vmware/vic/lib/portlayer/storage"
+	splc "github.com/vmware/vic/lib/portlayer/storage/compute"
 	"github.com/vmware/vic/lib/portlayer/storage/nfs"
 	"github.com/vmware/vic/lib/portlayer/storage/vsphere"
 	"github.com/vmware/vic/lib/portlayer/util"
@@ -104,6 +105,7 @@ func (h *StorageHandlersImpl) Configure(api *operations.PortLayerAPI, handlerCtx
 
 	api.StorageExportArchiveHandler = storage.ExportArchiveHandlerFunc(h.ExportArchive)
 	api.StorageImportArchiveHandler = storage.ImportArchiveHandlerFunc(h.ImportArchive)
+	api.StorageStatPathHandler = storage.StatPathHandlerFunc(h.StatPath)
 }
 
 func (h *StorageHandlersImpl) configureVolumeStores(op trace.Operation, handlerCtx *HandlerContext) {
@@ -517,71 +519,140 @@ func (h *StorageHandlersImpl) VolumeJoin(params storage.VolumeJoinParams) middle
 	return storage.NewVolumeJoinOK().WithPayload(actualHandle.String())
 }
 
+func (h *StorageHandlersImpl) StatPath(params storage.StatPathParams) middleware.Responder {
+	defer trace.End(trace.Begin(""))
+	op := trace.NewOperation(context.Background(), "StatPath: %s", params.DeviceID)
+
+	var resp middleware.Responder
+	switch params.Store {
+	case "container":
+		resp = storage.NewStatPathInternalServerError()
+	case "guesttools":
+		resp = preformOnlineStatPath(op, params)
+	default:
+		resp = storage.NewStatPathInternalServerError()
+	}
+
+	return resp
+
+}
+
 // ExportArchive creates a tar archive and returns to caller
 func (h *StorageHandlersImpl) ExportArchive(params storage.ExportArchiveParams) middleware.Responder {
 	defer trace.End(trace.Begin(""))
+	op := trace.NewOperation(context.Background(), "ExportArchive: %s", params.DeviceID)
 
-	var filterSpec vicarchive.FilterSpec
-	if params.FilterSpec != nil && len(*params.FilterSpec) > 0 {
-		if decodedSpec, err := base64.StdEncoding.DecodeString(*params.FilterSpec); err == nil {
-			if len(decodedSpec) > 0 {
-				log.Infof("decoded spec = %s", string(decodedSpec))
-				if err = json.Unmarshal(decodedSpec, &filterSpec); err != nil {
-					log.Errorf("Unable to unmarshal decoded spec: %s", err)
-					return storage.NewImportArchiveInternalServerError()
-				}
-			}
-		}
+	filterSpec := archive.DecodeFilterSpec(params.FilterSpec)
+	if filterSpec == nil {
+		return storage.NewExportArchiveInternalServerError()
 	}
 
-	// Return the data back to the caller
-	pipeReader, pipeWriter := io.Pipe()
-	go func() {
-		pipeWriter.Write([]byte("This is a test!"))
-		pipeWriter.Close()
-	}()
-	detachableOut := NewFlushingReader(pipeReader)
+	var rc io.ReadCloser
+	var err error
+	switch params.Store {
+	case "container":
+		return storage.NewExportArchiveLocked()
+	case "guesttools":
+		vc := epl.Containers.Container(params.DeviceID)
+		if vc == nil {
+			return storage.NewExportArchiveNotFound()
+		}
 
+		rc, err = splc.FileTransferFromGuest(op, vc, filterSpec.RebasePath)
+		if err != nil {
+			op.Errorf("FileTransferFromGuest error: %s", err.Error())
+			return storage.NewExportArchiveInternalServerError()
+		}
+	default:
+		return storage.NewExportArchiveInternalServerError()
+	}
+
+	detachableOut := NewFlushingReader(rc)
 	return NewStreamOutputHandler("ExportArchive").WithPayload(detachableOut, params.DeviceID, nil)
+
 }
 
 // ImportArchive takes an input tar archive and unpacks to destination
 func (h *StorageHandlersImpl) ImportArchive(params storage.ImportArchiveParams) middleware.Responder {
 	defer trace.End(trace.Begin(""))
+	defer params.Archive.Close()
+	op := trace.NewOperation(context.Background(), "ImportArchive: %s", params.DeviceID)
 
-	var filterSpec vicarchive.FilterSpec
-	if params.FilterSpec != nil && len(*params.FilterSpec) > 0 {
-		if decodedSpec, err := base64.StdEncoding.DecodeString(*params.FilterSpec); err == nil {
-			if len(decodedSpec) > 0 {
-				log.Debugf("decoded spec = %s", string(decodedSpec))
-				if err = json.Unmarshal(decodedSpec, &filterSpec); err != nil {
-					log.Errorf("Unable to unmarshal decoded spec: %s", err)
-					return storage.NewImportArchiveInternalServerError()
-				}
-			}
-		}
+	filterSpec := archive.DecodeFilterSpec(params.FilterSpec)
+	if filterSpec == nil {
+		return storage.NewExportArchiveInternalServerError()
 	}
 
 	detachableIn := NewFlushingReader(params.Archive)
 
-	// This is where you need to take the reader and do something with the tar data
-	var buf bytes.Buffer
-	writer := bufio.NewWriter(&buf)
-	_, err := io.Copy(writer, detachableIn)
-	if err != nil {
-		log.Errorf("Copy tar stream returned error - %s", err.Error())
-		params.Archive.Close()
+	switch params.Store {
+	case "container":
+		var buf bytes.Buffer
+		writer := bufio.NewWriter(&buf)
+		_, err := io.Copy(writer, detachableIn)
+		if err != nil {
+			op.Errorf("Copy tar stream returned error - %s", err.Error())
+			return storage.NewImportArchiveInternalServerError()
+		}
+	case "guesttools":
+		vc := epl.Containers.Container(params.DeviceID)
+		if vc == nil {
+			return storage.NewImportArchiveNotFound()
+		}
+
+		err := splc.FileTransferToGuest(op, vc, filterSpec.RebasePath, ioutil.NopCloser(detachableIn))
+		if err != nil {
+			op.Errorf("FileTransferToGuest error: %s", err)
+			return storage.NewImportArchiveInternalServerError()
+		}
+	default:
 		return storage.NewImportArchiveInternalServerError()
 	}
-
-	params.Archive.Close()
-
-	log.Infof(buf.String())
 
 	return storage.NewImportArchiveOK()
 }
 
 //utility functions
+
+func preformOnlineStatPath(op trace.Operation, params storage.StatPathParams) middleware.Responder {
+	vc := epl.Containers.Container(params.DeviceID)
+	if vc == nil {
+		return storage.NewStatPathNotFound()
+	}
+
+	file, err := splc.StatPath(op, vc, params.TargetPath)
+	if err != nil {
+		op.Errorf("Error getting stat from device %d: %s", params.DeviceID, err.Error())
+		return storage.NewStatPathInternalServerError()
+	}
+
+	var mode uint32
+	switch types.GuestFileType(file.Type) {
+	case types.GuestFileTypeDirectory:
+		mode = uint32(os.ModeDir)
+	case types.GuestFileTypeSymlink:
+		mode = uint32(os.ModeSymlink)
+	default:
+		mode = uint32(os.FileMode(uint32(0600)))
+	}
+
+	ok := storage.
+		NewStatPathOK().
+		WithMode(mode).
+		WithLinkTarget(file.Attributes.GetGuestFileAttributes().SymlinkTarget).
+		WithName(filepath.Base(file.Path)).
+		WithSize(file.Size)
+
+	// add mod time bytes
+	modTimeBytes, err := file.Attributes.GetGuestFileAttributes().ModificationTime.GobEncode()
+	if err != nil {
+		op.Debugf("error getting mod time from statpath: %s", err.Error())
+	} else {
+		ok.ModTime = string(modTimeBytes)
+	}
+
+	return ok
+}
 
 // convert an SPL Image to a swagger-defined Image
 func convertImage(image *spl.Image) *models.Image {
